--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Portfolio
+image: assets/images/about/author.jpg
+signature: assets/images/about/signature.png
 ---
 <!-- portfolio -->
 <section class="section">
